--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,1 +1,7 @@
-Hello world
+<h1>Hello world</h1>
+<nav>
+    <ul>
+        <li><a href="/admin">admin</a></li>
+        <li><a href="/users">users</a></li>
+    </ul>
+</nav>
